--- a/thaigov.info.yml
+++ b/thaigov.info.yml
@@ -3,6 +3,13 @@ type: profile
 description: 'A distribution for government and the public sector in Thailand.'
 core: 8.x
 
+# Optional: Declare your installation profile as a distribution
+# This will make the installer auto-select this installation profile.
+# The distribution_name property is used in the installer and other places as
+# a label for the software being installed.
+distribution:
+  name: ThaiGov
+
 # Required modules
 dependencies:
   - node
