--- a/thaigov.info.yml
+++ b/thaigov.info.yml
@@ -8,34 +8,52 @@ core: 8.x
 # The distribution_name property is used in the installer and other places as
 # a label for the software being installed.
 distribution:
-  name: ThaiGov
+  name: ThaiGov Distribution.
 
 # Required modules
 dependencies:
-  - node
-  - history
+  - automated_cron
   - block
   - block_content
   - breakpoint
+  - ckeditor
   - color
-  - config
   - comment
-  - contextual
+  - config
   - contact
-  - quickedit
-  - help
-  - image
-  - options
-  - path
-  - taxonomy
+  - contextual
+  - datetime
   - dblog
-  - search
-  - shortcut
-  - toolbar
+  - dynamic_page_cache
+  - editor
+  - field
   - field_ui
   - file
+  - filter
+  - help
+  - history
+  - image
+  - link
+  - menu_ui
+  - node
+  - options
+  - page_cache
+  - path
+  - quickedit
   - rdf
-  - views
+  - search
+  - shortcut
+  - system
+  - taxonomy
+  - text
+  - toolbar
+  - tour
+  - update
+  - user
   - views_ui
-  - editor
-  - ckeditor
+  - menu_link_content
+  - views
+
+themes:
+  - bartik
+  - seven
