--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,16 @@
 	"type": "drupal-profile",
 	"license": "GPL-2.0-or-later",
 	"authors": [],
+    "repositories": {
+        "drupal": {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
+        },
+        "assets": {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    },
     "require": {
         "drupal/calendar":                      "^1.0@alpha",
         "drupal/media_entity_browser":          "^2.0@alpha",
@@ -17,7 +27,6 @@
         "drupal/token_filter":                  "^1.3.0",
         "drupal/views_templates":               "~1.1.0",
         "drupal/entity_print":                  "~2.5.0",
-        "drupal/group":                         "~1.2.0",
         "drupal/popup_field_group":             "~1.6.0",
         "drupal/video":                         "^1.5.0@alpha",
         "drupal/embed":                         "~1.5.0",
@@ -26,22 +35,13 @@
         "drupal/ctools":                        "~3.7.0",
         "drupal/entity_reference_revisions":    "~1.9.0",
         "drupal/inline_entity_form":            "^1.0@rc",
-        "drupal/mailsystem":                    "~4.3.0",
-        "drupal/mimemail":                      "^1.0.0@alpha",
         "drupal/search_api":                    "~1.20.0",
         "drupal/jwt":                           "^1.0@rc",
         "drupal/restui":                        "~1.20.0",
-        "drupal/ckeditor_font":                 "^1.0@dev",
-        "drupal/userprotect":                   "~1.1.0",
-        "drupal/role_delegation":               "~1.1.0",
         "drupal/profile":                       "~1.3.0",
         "drupal/ultimate_cron":                 "^2.0@alpha",
-        "drupal/queue_ui":                      "~2.2.0",
         "drupal/views_infinite_scroll":         "~1.8.0",
-        "drupal/twig_field_value":              "~2.0.0",
-        "drupal/simple_gmap":                   "~3.0.1",
-        "drupal/honeypot":                      "^2.0",
-        "drupal/css_editor":                    "^2.0"
+        "drupal/twig_field_value":              "~2.0.0"
     },
     "extra": {
         "patches": {
