--- a/thaigov.info.yml
+++ b/thaigov.info.yml
@@ -1,18 +1,16 @@
 name: ThaiGov
 type: profile
 description: 'A distribution for government and the public sector in Thailand.'
-core_version_requirement: ^9
+core_version_requirement: ^9 || ^10
 distribution:
   name: ThaiGov Distribution.
 
-# Required modules
-dependencies:
+install:
   - node
   - history
   - block
   - breakpoint
   - ckeditor
-  - color
   - config
   - comment
   - contextual
@@ -20,7 +18,6 @@ dependencies:
   - menu_link_content
   - datetime
   - block_content
-  - quickedit
   - editor
   - help
   - image
@@ -43,5 +40,5 @@ dependencies:
   - tour
   - automated_cron
 themes:
-  - bartik
-  - seven
+  - olivero
+  - claro
