--- a/composer.json
+++ b/composer.json
@@ -15,33 +15,26 @@
         }
     },
     "require": {
-        "drupal/calendar":                      "^1.0@alpha",
-        "drupal/media_entity_browser":          "^2.0@alpha",
-        "drupal/pdf":                           "^1.0@dev",
-        "drupal/better_exposed_filters":        "^5.0@beta",
-        "drupal/ckeditor_bgimage":              "2.0.0",
-        "drupal/config_rewrite":                "~1.4.0",
-        "drupal/entity":                        "~1.2.0",
-        "drupal/field_group":                   "~3.2.0",
-        "drupal/token":                         "~1.9.0",
-        "drupal/token_filter":                  "^1.3.0",
-        "drupal/views_templates":               "~1.1.0",
-        "drupal/entity_print":                  "~2.5.0",
-        "drupal/popup_field_group":             "~1.6.0",
-        "drupal/video":                         "^1.5.0@alpha",
-        "drupal/embed":                         "~1.5.0",
-        "drupal/entity_embed":                  "~1.2.0",
-        "drupal/entity_browser":                "~2.6.0",
-        "drupal/ctools":                        "~3.7.0",
-        "drupal/entity_reference_revisions":    "~1.9.0",
-        "drupal/inline_entity_form":            "^1.0@rc",
-        "drupal/search_api":                    "~1.20.0",
-        "drupal/jwt":                           "^1.0@rc",
-        "drupal/restui":                        "~1.20.0",
-        "drupal/profile":                       "~1.3.0",
-        "drupal/ultimate_cron":                 "^2.0@alpha",
-        "drupal/views_infinite_scroll":         "~1.8.0",
-        "drupal/twig_field_value":              "~2.0.0"
+        "drupal/admin_toolbar":                 "^3.3",
+        "drupal/better_exposed_filters":        "^6.0",
+        "drupal/captcha":                       "^1.9",
+        "drupal/ctools":                        "^4.0",
+        "drupal/colorbox":                      "^2.0",
+        "drupal/devel":                         "^5.0",
+        "drupal/entity":                        "^1.4",
+        "drupal/entity_reference_revisions":    "^1.10",
+        "drupal/field_group":                   "^3.4",
+        "drupal/google_analytics":              "^4.0",
+        "drupal/imce":                          "^3.0",
+        "drupal/metatag":                       "^1.22",
+        "drupal/pathauto":                      "^1.11",
+        "drupal/recaptcha":                     "^3.1",
+        "drupal/redirect":                      "^1.8",
+        "drupal/token":                         "^1.11",
+        "drupal/twig_field_value":              "^2.0",
+        "drupal/views_bulk_operations":         "^4.2",
+        "drupal/webform":                       "^6.2@beta",
+        "drupal/xmlsitemap":                    "^1.4"
     },
     "extra": {
         "patches": {
