--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "drupal/redirect":                      "^1.8",
         "drupal/smtp":                          "^1.2",
         "drupal/text_resize":                   "^1.3",
+        "drupal/thaigov_claro":                 "^1.0@beta",
         "drupal/token":                         "^1.11",
         "drupal/twig_tweak":                    "^3.2",
         "drupal/twig_field_value":              "^2.0",
