--- a/thaigov.info.yml
+++ b/thaigov.info.yml
@@ -4,6 +4,8 @@ description: 'A distribution for government and the public sector in Thailand.'
 core_version_requirement: ^9 || ^10
 distribution:
   name: ThaiGov Distribution.
+  install:
+    theme: thaigov_claro
 
 install:
   - node
@@ -38,6 +40,20 @@ install:
   - views_ui
   - tour
   - automated_cron
+
+   # Contrib
+  - admin_toolbar
+  - admin_toolbar_tools
+  - ctools
+  - entity
+  - pathauto
+  - redirect
+  - text_resize
+  - token
+  - twig_field_value
+  - twig_tweak
+  - xmlsitemap
+
 themes:
   - olivero
-  - claro
+  - thaigov_claro
