--- a/composer.json
+++ b/composer.json
@@ -19,37 +19,41 @@
         }
     },
     "require": {
-        "drupal/admin_toolbar":                 "^3.3",
+        "drupal/admin_toolbar":                 "^3.4",
         "drupal/better_exposed_filters":        "^6.0",
-        "drupal/blazy":                         "^2.14",
-        "drupal/captcha":                       "^1.9",
+        "drupal/blazy":                         "^2.22",
+        "drupal/captcha":                       "^2.0",
         "drupal/ctools":                        "^4.0",
         "drupal/colorbox":                      "^2.0",
         "drupal/devel":                         "^5.0",
         "drupal/draggableviews":                "^2.1",
         "drupal/easy_breadcrumb":               "^2.0",
         "drupal/entity":                        "^1.4",
-        "drupal/entity_browser":                "^2.8",
+        "drupal/entity_browser":                "^2.10",
         "drupal/entity_reference_revisions":    "^1.10",
+        "drupal/entity_view_redirect":          "^1.0@beta",
         "drupal/field_group":                   "^3.4",
         "drupal/feeds":                         "^3.0@beta",
         "drupal/google_analytics":              "^4.0",
         "drupal/imce":                          "^3.0",
-        "drupal/metatag":                       "^1.22",
-        "drupal/pathauto":                      "^1.11",
-        "drupal/recaptcha":                     "^3.1",
-        "drupal/redirect":                      "^1.8",
-        "drupal/smtp":                          "^1.2",
+        "drupal/mailer":                        "^2.0@beta",
+        "drupal/metatag":                       "^2.0",
+        "drupal/pathauto":                      "^1.12",
+        "drupal/recaptcha":                     "^3.2",
+        "drupal/redirect":                      "^1.9",
+        "drupal/session_limit":                 "^2.0@beta",
         "drupal/text_resize":                   "^1.3",
         "drupal/thaigov_claro":                 "^1.0@beta",
-        "drupal/token":                         "^1.11",
+        "drupal/token":                         "^1.13",
         "drupal/twig_tweak":                    "^3.2",
         "drupal/twig_field_value":              "^2.0",
         "drupal/views_bulk_operations":         "^4.2",
         "drupal/views_infinite_scroll":         "^2.0",
         "drupal/ultimate_cron":                 "^2.0@alpha",
-        "drupal/webform":                       "^6.2@beta",
-        "drupal/xmlsitemap":                    "^1.4"
+        "drupal/userprotect":                   "^1.2",
+        "drupal/webform":                       "^6.2",
+        "drupal/xmlsitemap":                    "^1.5",
+        "drupal/yoast_seo":                     "^2.0@alpha"
     },
     "extra": {
         "patches": {
