--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "drupal/redirect":                      "^1.9",
         "drupal/session_limit":                 "^2.0@beta",
         "drupal/text_resize":                   "^1.3",
+        "drupal/tailwindcss":                   "^5.0@alpha",
         "drupal/thaigov_claro":                 "^1.0@beta",
         "drupal/token":                         "^1.13",
         "drupal/twig_tweak":                    "^3.2",
