--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "drupal/recaptcha":                     "^3.2",
         "drupal/redirect":                      "^1.9",
         "drupal/session_limit":                 "^2.0@beta",
+        "drupal/stable":                        "^2.0",
         "drupal/text_resize":                   "^1.3",
         "drupal/tailwindcss":                   "^5.0@alpha",
         "drupal/thaigov_claro":                 "^1.0@beta",
