--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,11 @@
         "drupal/admin_toolbar":                 "^3.4",
         "drupal/better_exposed_filters":        "^6.0",
         "drupal/blazy":                         "^2.22",
+        "drupal/bootstrap5":                    "^4.0",
         "drupal/captcha":                       "^2.0",
         "drupal/ctools":                        "^4.0",
         "drupal/colorbox":                      "^2.0",
+        "drupal/cookies":                       "^1.2",
         "drupal/devel":                         "^5.0",
         "drupal/draggableviews":                "^2.1",
         "drupal/easy_breadcrumb":               "^2.0",
@@ -44,7 +46,7 @@
         "drupal/session_limit":                 "^2.0@beta",
         "drupal/stable":                        "^2.0",
         "drupal/text_resize":                   "^1.3",
-        "drupal/tailwindcss":                   "^5.0@alpha",
+        "drupal/tailwindcss":                   "^5.0",
         "drupal/thaigov_claro":                 "^1.0@beta",
         "drupal/token":                         "^1.13",
         "drupal/twig_tweak":                    "^3.2",
